re PR fortran/40726 (miscompilation at -O1)

2009-07-21  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/40726
	* trans-decl.c (gfc_get_extern_function_decl): Do not set
	DECL_IS_MALLOC for pointer valued functions.
	(build_function_decl): The same.

From-SVN: r149846